# customer-care-agents

./: .gitignore  ADK_SETUP.md  AUTO_GCP_SETUP.sh  CLAUDE.md  COPY_PASTE_COMMANDS.md  GCP_AUTH_SETUP.md  README.md  TESTING.md
adk_refund/: .env.example  .gitignore  README.md  app.py  check_setup.sh  guardrails.py  pyproject.toml  refund_golden.evalset.json  refund_simple.py  run.sh  run_refund.py  server.py  setup_gcp.sh  test_gemini.py
adk_refund/data/scenario-1-auto-approve/: details.json
adk_refund/data/scenario-2-past-window/: details.json
adk_refund/data/scenario-3-in-transit/: details.json
adk_refund/data/scenario-4-not-found/: details.json
adk_refund/data/scenario-5-high-value/: details.json
adk_refund/data/scenario-6-duplicate/: details.json
adk_refund/data/scenario-7-fraud-risk/: details.json
adk_refund/docs/: 05-agent-engine-deployment.md
adk_refund/refund_agent/: .gitignore  __init__.py  agent.py  requirements.txt  skills.py  tools.py
adk_refund/refund_agent/skills/customer-refund/fraud-detection/: SKILL.md
customer-care-agent/: README.md  TESTING.md
customer-care-agent/adk_care/: .dockerignore  Dockerfile  guardrails.py  m3_memory_demo.py  pyproject.toml  requirements.txt  serve.py  session_state_demo.py
customer-care-agent/adk_care/care_agent/: agent.py
customer-care-agent/adk_care/care_agent/skills/customer-care/: SKILL.md
customer-care-agent/docs/: 01-coordinator-design.md  02-conversation-eval.md  03-a2a-local.md
docs/: agent-first-principles.md  deploy-cheatsheet.md  eval-loop.md  harness-agent-platform.md  harness-cloud-run.md  harness-operating-models.md
eval/: judge.py  run_eval.py
eval/dataset/: cases.jsonl
eval/results/: care_trajectory.csv  refund_outcome.csv
refund-agent/: AUTO_GCP_SETUP.sh  QUICK_START.md  README.md  TESTING.md
(+31 files in other folders)
