[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refund-adk-agent"
version = "0.1.0"
description = "Customer Refund Service Agent built with Google ADK and Gemini"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.31.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "google-cloud-firestore>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
