[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refund-adk-agent"
version = "0.1.0"
description = "Customer Refund Service Agent built with Google ADK and Gemini"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.31.0",
    "google-cloud-firestore>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["refund_agent"]

# Bundle the verbatim Claude-Code SKILL.md tree into the wheel so deployment
# (Agent Engine / Cloud Run) is fully self-contained.
[tool.hatch.build.targets.wheel.force-include]
"refund_agent/skills" = "refund_agent/skills"
